--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -75,7 +75,7 @@
           </a>
           <a
             href="https://app.callsupport.ai/signup"
-            class="inline-flex items-center h-8 justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
+            class="inline-flex items-center justify-center h-8  px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
             Get Started
           </a>
         </div>
