--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -62,7 +62,7 @@ import Page  from '../vapi/page'
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
       <div class="bg-gray-100 p-8 rounded-3xl">
         <!-- <VoiceAIButton /> -->
-        <Page />
+        <Page client:load />
         <!-- <img
           alt="#_"
           class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
