--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -299,7 +299,7 @@
     <div class="mx-auto pt-12  gap-y-10 ">
       <section class="flex py-4  lg:py-20 flex-col lg:flex-row items-center justify-between px-6 lg:py-8 bg-black rounded-3xl relative text-white shadow-lg lg:gap-8">
         <!-- Dedicated Badge -->
-        <div class="absolute top-4 left-4 bg-gray-800 text-sm px-3 py-1 rounded-full flex items-center">
+        <div class="hidden md:block absolute top-4 left-4 bg-gray-800 text-sm px-3 py-1 rounded-full flex items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
