--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -55,6 +55,7 @@
             x-show="useCaseOpen"
             class="absolute left-0 mt-2 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10"
             x-cloak>
+            <a href="/ecomerece" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Ecomerece</a>
             <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Real Estate</a>
             <a href="/recruitment" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recrutiment</a>
             <a href="/health" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Health</a>
