--- a/src/components/infopages/usecase/DealerShip.astro
+++ b/src/components/infopages/usecase/DealerShip.astro
@@ -6,16 +6,16 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
       <!-- Left Section -->
       <div>
-        <h1 class="text-5xl font-bold mb-6 leading-tight">
+        <p  class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display  mb-8">
           AI Phone Agents to Drive Your Dealership Growth
-        </h1>
-        <p class="mb-6 text-lg">
+        </p>
+        <p class="mb-6  text-gray-500 text-lg">
           Revolutionize your dealership with AI-powered customer support that
           works seamlessly to engage leads, follow up on inquiries, and recover
           missed opportunities. Boost customer satisfaction and sales in just
           three easy steps:
         </p>
-        <ul class="list-decimal list-inside space-y-2 text-lg">
+        <ul class="list-decimal list-inside space-y-2 text-gray-500 text-lg">
           <li>Activate your AI-powered phone agent.</li>
           <li>Connect your dealership management system.</li>
           <li>Serve customers 24/7 with personalized follow-ups.</li>
@@ -24,7 +24,7 @@
       <!-- Right Section -->
 
       <div
-        class="bg-[#c2c2c256] from-[#747474] via-[#1d1a2000] to-[#787879] p-8 rounded-lg shadow-lg max-w-sm mx-auto"
+        class="rounded-3xl bg-gray-50 p-8 shadow-lg max-w-sm mx-auto"
       >
         <h2 class="text-xl font-bold text-black mb-6">
           Experience CallSupport AI in Action
