--- a/src/components/infopages/usecase/Solar.astro
+++ b/src/components/infopages/usecase/Solar.astro
@@ -5,16 +5,16 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
       <!-- Left Section -->
       <div>
-        <h1 class="text-5xl font-bold mb-6 leading-tight">
+        <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mb-8">
           AI Phone Agents to Optimize Solar Energy Services
-        </h1>
-        <p class="mb-6 text-lg">
+        </p>
+        <p class="mb-6 text-lg text-gray-500">
           Revolutionize your solar energy business with AI-powered virtual
           agents that handle customer inquiries, schedule consultations, and
           follow-ups seamlessly. Enhance customer satisfaction and increase
           solar installations in just three easy steps:
         </p>
-        <ul class="list-decimal list-inside space-y-2 text-lg">
+        <ul class="list-decimal list-inside space-y-2 text-lg text-gray-500">
           <li>Activate your AI-powered phone agent.</li>
           <li>Integrate with your solar CRM or management system.</li>
           <li>Provide 24/7 support and personalized customer interactions.</li>
@@ -23,7 +23,7 @@
       <!-- Right Section -->
 
       <div
-        class="bg-[#c2c2c256] from-[#747474] via-[#1d1a2000] to-[#787879] p-8 rounded-lg shadow-lg max-w-sm mx-auto"
+        class="rounded-3xl bg-gray-50  p-8  shadow-lg max-w-sm mx-auto"
       >
         <h2 class="text-xl font-bold text-black mb-6">
           Experience AI for Solar Energy Success
