--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -11,7 +11,7 @@
     <div
       class="grid max-w-2xl grid-cols-1 py-4 mt-24 -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2"
     >
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
+      <section class="flex flex-col px-6  lg:py-8 rounded-3xl bg-gray-50">
         <h3 class="mt-5 text-lg text-black font-display">Free Plan</h3>
         <p class="mt-2 text-sm text-gray-500">
           Best for testing out our tool.
