usecase design updated

--- a/src/components/infopages/Enterprise.astro
+++ b/src/components/infopages/Enterprise.astro
@@ -149,7 +149,7 @@
         <!-- Submit Button -->
         <button
           type="submit"
-          class="w-full bg-black text-white py-2 rounded-lg cursor-pointer transition"
+         class="w-full h-10 bg-gradient-to-r items-center justify-center focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white rounded-lg transition duration-300 shadow-lg"
         >
           Send message
         </button>
