--- a/src/components/infopages/usecase/Recrutiment.astro
+++ b/src/components/infopages/usecase/Recrutiment.astro
@@ -73,7 +73,7 @@
           <!-- Submit Button -->
           <button
             type="submit"
-            class="w-full bg-gradient-to-r from-black to-gray-700 text-white cursor-pointer font-semibold py-3 rounded-lg transition duration-300 shadow-lg"
+            class="w-full h-10 bg-gradient-to-r items-center justify-center focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white rounded-lg transition duration-300 shadow-lg"
           >
             Try a Live AI Demo
           </button>
