--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -55,9 +55,9 @@
             x-show="useCaseOpen"
             class="absolute left-0 mt-2 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10"
             x-cloak>
-            <a href="/ecomerece" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Ecomerece</a>
+            <a href="/ecommerce" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Ecommerce</a>
             <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Real Estate</a>
-            <a href="/recruitment" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recrutiment</a>
+            <a href="/recruitment" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recruitment</a>
             <a href="/health" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Health</a>
             <a href="/solar" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Solar </a>
             <a href="/car-dealership" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Car Dearlership </a>
