demo btn desgin updated

--- a/src/components/infopages/VoiceAIButton.astro
+++ b/src/components/infopages/VoiceAIButton.astro
@@ -7,7 +7,7 @@ import RadialCard  from '../vapi/RadialCard'
 <div class="min-h-[10vh] flex flex-col text-center  text-gray-800">
   <!-- Header Section -->
 
-  <div class="w-full flex justify-center mb-">
+  <div class="w-full flex justify-center md:mt-16 md:mb-16">
     <RadialCard client:load />
   </div>
 
