--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -8,7 +8,7 @@ import VoiceAIButton from '../infopages/VoiceAIButton.astro'
     <div class="text-center max-w-4xl mx-auto">
       <div class="sm:flex sm:justify-center">
         <div
-          class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+          class="relative rounded-full py-1 px-3 mb-4 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
           <a
             href="https://app.callsupport.ai/"
             class="font-semibold text-accent-600"
@@ -29,6 +29,7 @@ import VoiceAIButton from '../infopages/VoiceAIButton.astro'
         Automate all your phone calls with AI
       </p>
     </div>
+    <VoiceAIButton  />
     <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
       <a
       class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
@@ -60,17 +61,16 @@ import VoiceAIButton from '../infopages/VoiceAIButton.astro'
     </dl>
 
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
-      <div class="bg-gray-100 p-8 rounded-3xl">
+      <!-- <div class="bg-gray-100 p-8 rounded-3xl"> -->
         <!-- <VoiceAIButton /> -->
-        <VoiceAIButton  />
         <!-- <img
           alt="#_"
           class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
           src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
         /> -->
 
-      </div>
-    </div>
+      <!-- </div> -->
+    <!-- </div> -->
     <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
       <div class="flex justify-center col-span-1 ">
         <img alt="logo" class="h-8" src="/Figma.svg" />
