--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -33,7 +33,7 @@
             </li>
             <li>
               <a
-                href="/affiliate"
+                href="https://call-support.affonso.io/"
                 class="hover:text-black">
                 Affiliate
               </a>
