--- a/src/pages/affiliate.astro
+++ b/src/pages/affiliate.astro
@@ -4,7 +4,9 @@ import Affiliate from "../components/infopages/Affiliate.astro";
 
 ---
 
-
+<head>
+  <title>Affiliate </title>
+</head>
 
 <BaseLayout>
 
