--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Blog from "../components/infopages/Blog.astro";
 
 ---
-
+<head>
+  <title>Blog </title>
+</head>
 <BaseLayout>
 
   <Blog />
