--- a/src/pages/car-dealership.astro
+++ b/src/pages/car-dealership.astro
@@ -4,6 +4,9 @@ import DealerShip from "../components/infopages/usecase/DealerShip.astro";
 
 ---
 
+<head>
+  <title>Usecase | DealerShip </title>
+</head>
 
 
 <BaseLayout>
