--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -3,7 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Demo from "../components/infopages/Demo.astro";
 
 ---
-
+<head>
+  <title>Demo  </title>
+</head>
 <BaseLayout>
 
   <Demo  />
