--- a/src/pages/ecommerce.astro
+++ b/src/pages/ecommerce.astro
@@ -4,6 +4,9 @@ import Ecomerece from "../components/infopages/usecase/Ecomerece.astro";
 
 ---
 
+<head>
+  <title>Usecase | Ecomerece </title>
+</head>
 
 
 <BaseLayout>
