--- a/src/pages/enterprise.astro
+++ b/src/pages/enterprise.astro
@@ -3,6 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Enterprise from "../components/infopages/Enterprise.astro";
 
 ---
+<head>
+  <title>Usecase | Enterprise </title>
+</head>
 
 
 
