--- a/src/pages/estate.astro
+++ b/src/pages/estate.astro
@@ -3,7 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import RealEstate from "../components/infopages/usecase/RealEstate.astro";
 
 ---
-
+<head>
+  <title>Usecase | RealEstate</title>
+</head>
 
 
 <BaseLayout>
