--- a/src/pages/health.astro
+++ b/src/pages/health.astro
@@ -4,7 +4,9 @@ import Health from "../components/infopages/usecase/Health.astro";
 
 ---
 
-
+<head>
+  <title>Usecase | Health </title>
+</head>
 
 <BaseLayout>
 
