--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,9 @@ import Testimonial from "../components/global/Testimonial.astro";
 import Pricing from "../components/landing/Pricing.astro";
 import Cta from "../components/global/Cta.astro";
 ---
+<head>
+  <title>Callsupport.ai </title>
+</head>
 <BaseLayout>
 
   <Hero />
