--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,7 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Login from "../components/Forms/Login.astro";
 
 ---
-
+<head>
+  <title>Login </title>
+</head>
 
 <BaseLayout>
   <Login />
