--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -3,7 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Privacy from "../components/infopages/Privacy.astro";
 
 ---
-
+<head>
+  <title>Privacy </title>
+</head>
 <BaseLayout>
   <Privacy />
 </BaseLayout>
