--- a/src/pages/recruitment.astro
+++ b/src/pages/recruitment.astro
@@ -4,7 +4,9 @@ import Recrutiment from "../components/infopages/usecase/Recrutiment.astro";
 
 ---
 
-
+<head>
+  <title>Usecase | Recrutiment</title>
+</head>
 
 <BaseLayout>
 
