--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -2,6 +2,9 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Signup from "../components/Forms/Signup.astro";
 ---
+<head>
+  <title>Signup </title>
+</head>
 <BaseLayout>
   <Signup />
 </BaseLayout>
