--- a/src/pages/solar.astro
+++ b/src/pages/solar.astro
@@ -4,6 +4,9 @@ import Solar from "../components/infopages/usecase/Solar.astro";
 
 ---
 
+<head>
+  <title>Usecase | Solar</title>
+</head>
 
 
 <BaseLayout>
