--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -2,6 +2,9 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Terms from "../components/infopages/Terms.astro";
 ---
+<head>
+  <title>Terms </title>
+</head>
 <BaseLayout>
   <Terms />
 </BaseLayout>
