--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Cta from "../components/global/Cta.astro";
 ---
 <head>
   <title>Callsupport.ai </title>
+  <meta name="description" content="Discover Callsupport.ai, your ultimate solution for seamless communication and efficient customer support. Explore our features today!" />
 </head>
 <BaseLayout>
 
