titles in pages added

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -34,6 +34,7 @@
             <li>
               <a
                 href="https://call-support.affonso.io/"
+                target="_blank"
                 class="hover:text-black">
                 Affiliate
               </a>
